# JuniorFetch

./: .gitignore  README.md  config.py  pyproject.toml
juniorfetch/: cli.py
juniorfetch/core/: crawler.py  llm_sandbox.py  omni_math.py  palace.py  tda_mesh.py
juniorfetch/playground/: app.py
